Networking/ingress-resources-scenario-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
  labels:
    name: ingress-resource
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/wear"
        backend:
          service:
            name: wear-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/watch"
        backend:
          service:
            name: watch-service
            port: 
              number: 80
