Networking/ingress-resources-scenario-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-2
  labels:
    name: ingress-resource
spec:
  rules:
  - host: "wear.my-online-store.com"
    http:
      paths:
      - pathType: Prefix
        path: "/wear"
        backend:
          service:
            name: wear-service
            port: 
              number: 80
  - host: "watch.my-online-store.com"
    http:
      paths:
      - pathType: Prefix
        path: "/watch"
        backend:
          service:
            name: watch-service
            port: 
              number: 80
